# llvm-project

mlir/examples/: CMakeLists.txt
mlir/examples/brilc/: CMakeLists.txt  README.md  brilc.cpp
mlir/examples/brilc/include/bril/: CMakeLists.txt  Dialect.h  MLIR2JSON.h  MLIRGen.h  Ops.td
mlir/examples/brilc/mlir/: Dialect.cpp  MLIR2JSON.cpp  MLIRGen.cpp
